# swagger/swagger.json
@@ -94,6 +94,12 @@
                 },
                 "scanSessionsDeleted": {
                     "type": "integer"
+                },
+                "userLabelsDeleted": {
+                    "type": "integer"
+                },
+                "vfsEntriesDeleted": {
+                    "type": "integer"
                 }
             }
         },
